fix dict errors
